# micro

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_TS_FRONTEND_MIGRATION.md  COMPLETION-CRITERIA.md  PRD-PHASES-0-1.json  README.md  STATUS.md  THEORETICAL_TESTS.md  VISION.md  VISUALIZATION.md  VISUALIZATION_MVP_SPEC.md  bilateral-protocol-ralph-interview.txt  frontend-ralph-interview.txt  frontend-refactor-fixes.txt  frontend-testing-1.txt  main.py  progress.txt  pyproject.toml  ralph-completion-criterion-chat.txt  review-synthesis-claude.txt  roadmap-production-etc-chat-1.txt  theoretical-foundations.md  visualization-prd-creation-chat.txt  web-frontend-chat-1.txt
.archived/: web-frontend-complete-ralph-loop-chat.txt
.archived/visualization-dearpygui/: README.md  __init__.py  app.py  browser.py  export.py
.claude/: ralph-loop.local.md
backend/: __init__.py  __main__.py  app.py  routes.py  simulation_manager.py  websocket.py
docs/: ADR-CODEBASE-RESTRUCTURE.md  CONTRIBUTING.md  DESIGN_dashboard_integration.md  DESIGN_matching_protocol.md  DOCUMENTATION-REFRESH-IDEAS.md  FEATURE-PARITY-REFERENCE.md  PLAN_theoretical_corrections.md  PRD-LAYOUT-REFACTOR.json  PRD-WEB-FRONTEND.json  ROADMAP-DISCUSSION-2026-01-08.md  SESSION_2026-01-02_council_review_synthesis.md  SESSION_2026-01-02_dashboard_phase1.md  SESSION_2026-01-02_theoretical_corrections.md  SESSION_2026_01_02_matching_implementation.md  SESSION_2026_01_02_matching_protocol.md  SESSION_REVIEW_2026_01_01_trading_chain.md  START-LAYOUT-REFACTOR.md  START-RALPH-LOOP-WEB-FRONTEND.md  THEORETICAL_TESTING_SESSION_2026_01_01.md  WEB-FRONTEND-EXPLORATION.md  comparative-study.md  opus-vision-critique.md
frontend/: package-lock.json  package.json  ralph-loop-agent-arch.txt  vite.config.ts
microecon/: __init__.py  actions.py  agent.py  bargaining.py  batch.py  beliefs.py  decisions.py  grid.py  information.py  manifest.py  matching.py  preferences.py  search.py  simulation.py
scenarios/: hub_and_spoke.yaml  trading_chain.yaml  two_agent_baseline.yaml
scripts/: benchmark.py  dev.sh  generate_ts_types.py  research_workflow.py  split-jackson-pdf.sh
server/: __init__.py  __main__.py  app.py  catalog_service.py  database.py  manifest_service.py  orchestrator_service.py  routes.py  simulation_manager.py  websocket.py
tests/: __init__.py  test_action_budget.py  test_actions.py  test_agent.py  test_analysis.py  test_bargaining.py  test_batch.py  test_beliefs.py  test_bundle.py  test_catalog_service.py  test_config_conversion.py  test_contract_conformance.py  test_database.py  test_decisions.py  test_determinism.py  test_edge_cases.py  test_emergence.py  test_grid.py  test_info_env_surface.py  test_information.py  test_integration.py  test_logging.py  test_manifest.py  test_manifest_service.py  test_matching.py  test_matching_conformance.py  test_orchestrator_integration.py  test_orchestrator_service.py  test_parquet.py  test_preferences.py  test_replay_loader.py  test_research_workflow.py  test_scenarios.py  test_search.py  test_simulation.py  test_theoretical_scenarios.py  test_ts_generation.py
(+210 files in other folders)
