[project]
name = "microecon"
version = "0.1.0"
description = "Research-first agent-based microeconomics platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
export = ["pillow>=10.0", "imageio>=2.30"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microecon"]
