[project]
name = "microecon"
version = "0.2.0"
description = "Research-first agent-based microeconomics platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
export = ["pillow>=10.0", "imageio>=2.30"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "theory: Formal theory verification against canonical texts (run when bargaining protocols change)",
    "scenario: Hand-computed theoretical scenarios (run when core economics modules change)",
    "core: Bundle, preferences, agent, grid, information fundamentals (fast, always safe to run)",
    "beliefs: Agent memory and learning systems (run when beliefs.py changes)",
    "search: Target evaluation and movement (run when search.py changes)",
    "matching: Matching protocols (run when matching.py changes)",
    "bargaining: Bargaining protocol tests (run when bargaining.py changes)",
    "simulation: Simulation engine and batch runner (run when simulation.py or batch.py changes)",
    "analysis: Logging and analysis infrastructure (run when logging/ or analysis/ changes)",
    "integration: Full pipeline tests (run before commits, slower)",
    "contract: Schema contract conformance tests (run when events.py, routes.py, or simulation_manager.py changes)",
    "determinism: Deterministic rerun equivalence tests (run when simulation.py or batch.py changes)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["microecon"]
